<?xml version="1.0"?>
<package format="2">
  <name>detection_visualizer</name>
  <version>0.0.0</version>
  <description>The detection_visualizer package</description>

  <maintainer email="alfierra@todo.todo">alfierra</maintainer>
  <license>TODO</license>

  <exec_depend>message_filters</exec_depend>
  <build_depend>message_filters</build_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>object_detector</exec_depend>
  <build_depend>object_detector</build_depend>
  <build_export_depend>object_detector</build_export_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
