<?xml version="1.0"?>
<package format="2">
  <name>semantic_mapper</name>
  <version>0.0.0</version>
  <description>The semantic_mapper package</description>
  <maintainer email="alfierra@todo.todo">alfierra</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>message_runtime</exec_depend> 

  <exec_depend>rospy</exec_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>visualization_msgs</exec_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>position_estimator</exec_depend>
  <build_depend>position_estimator</build_depend>
  <build_export_depend>position_estimator</build_export_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
